--- a/conf/rubocop-default.yml
+++ b/conf/rubocop-default.yml
@@ -3,4 +3,5 @@ require:
 
 inherit_gem:
   rubocop-airbnb:
+  # @see https://github.com/airbnb/ruby/blob/main/rubocop-airbnb/config/rubocop-airbnb.yml
   - config/rubocop-airbnb.yml
