--- a/conf/rubocop-metrics.yml
+++ b/conf/rubocop-metrics.yml
@@ -1,3 +1,4 @@
 inherit_gem:
   rubocop-airbnb:
+  # @see https://github.com/airbnb/ruby/blob/main/rubocop-airbnb/config/rubocop-naming.yml
   - config/rubocop-metrics.yml
