--- a/conf/rubocop-security.yml
+++ b/conf/rubocop-security.yml
@@ -1,3 +1,4 @@
 inherit_gem:
   rubocop-airbnb:
+  # @see https://github.com/airbnb/ruby/blob/main/rubocop-airbnb/config/rubocop-security.yml
   - config/rubocop-security.yml
