--- a/conf/default.yml
+++ b/conf/default.yml
@@ -1,3 +1,32 @@
+
+####
+# Enable rails rules
+####
+Rails:
+  Enabled: true
+
+####
+# Global rules
+####
+AllCops:
+  Exclude:
+    - '.chefrepo/**/*'
+    - '.vagrant/**/*'
+    - '.git/**/*'
+    - 'node_modules/**/*'
+    - 'tungsten/**/*'
+    - 'tungsten-support/**/*'
+    - 'vendor/**/*'
+    - Vagrantfile
+    - Guardfile
+
+  # Enable new rules only if validated by Captive (or Airbnb via inherited_from)
+  DisabledByDefault: true
+
+
+####
+# Include every files
+####
 inherit_from:
   - './rubocop-default.yml'
   - './rubocop-bundler.yml'
