--- a/conf/rubocop-default.yml
+++ b/conf/rubocop-default.yml
@@ -1,7 +1,6 @@
-require:
-  - rubocop-airbnb
+# require:
+#   - rubocop-airbnb
 
-inherit_gem:
-  rubocop-airbnb:
+# inherit_from:
   # @see https://github.com/airbnb/ruby/blob/main/rubocop-airbnb/config/rubocop-airbnb.yml
-  - config/rubocop-airbnb.yml
+  # - ./airbnb/rubocop-airbnb.yml
