--- a/conf/rubocop-rspec.yml
+++ b/conf/rubocop-rspec.yml
@@ -1,4 +1,3 @@
-inherit_gem:
-  rubocop-airbnb:
+inherit_from:
   # @see https://github.com/airbnb/ruby/blob/main/rubocop-airbnb/config/rubocop-rspec.yml
-  - config/rubocop-rspec.yml
+  - ./airbnb/rubocop-rspec.yml
