🚚 Rename default config

--- a/conf/default.yml
+++ b/conf/default.yml
@@ -28,7 +28,7 @@ AllCops:
 # Include every files
 ####
 inherit_from:
-  - './rubocop-default.yml'
+  - './rubocop-airbnb.yml'
   - './rubocop-bundler.yml'
   - './rubocop-gemspec.yml'
   - './rubocop-layout.yml'
