🚨 Correct folder ignore

--- a/config/default.yml
+++ b/config/default.yml
@@ -13,12 +13,15 @@ AllCops:
     - '.chefrepo/**/*'
     - '.vagrant/**/*'
     - '.git/**/*'
-    - 'node_modules/**/*'
+    - '**/tmp/**/*'
+    - '**/vendor/**/*'
+    - '**/node_modules/**/*'
     - 'tungsten/**/*'
     - 'tungsten-support/**/*'
-    - 'vendor/**/*'
     - Vagrantfile
     - Guardfile
+
+
 
   # Enable new rules only if validated by Captive (or Airbnb via inherited_from)
   DisabledByDefault: true
