✨ Enable Layout/FirstMethodParameterLineBreak

--- a/config/rubocop-layout.yml
+++ b/config/rubocop-layout.yml
@@ -15,6 +15,9 @@ Layout/ArgumentAlignment:
 Layout/FirstMethodArgumentLineBreak:
   Enabled: true
 
+Layout/FirstMethodParameterLineBreak:
+  Enabled: true
+
 Layout/HeredocArgumentClosingParenthesis:
   Enabled: true
 
