--- a/config/rubocop-layout.yml
+++ b/config/rubocop-layout.yml
@@ -24,6 +24,9 @@ Layout/HeredocArgumentClosingParenthesis:
 Layout/MultilineArrayLineBreaks:
   Enabled: true
 
+Layout/MultilineAssignmentLayout:
+  Enabled: true
+
 Layout/MultilineHashKeyLineBreaks:
   Enabled: true
 
