✨ Ignore line length on comments

--- a/config/rubocop-layout.yml
+++ b/config/rubocop-layout.yml
@@ -39,3 +39,7 @@ Layout/MultilineOperationIndentation:
 
 Layout/MultilineMethodParameterLineBreaks:
   Enabled: true
+
+Layout/LineLength:
+  # Disable LineLength on comments
+  AllowedPatterns: ['^(\s*#)']
