--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -3,71 +3,6 @@
 inherit_from:
   - './config/default.yml'
 
-# require:
-#   - rubocop-rails
-#   - rubocop-rspec
-#   - rubocop-performance
-
-# AllCops:
-#   NewCops: enable
-
-# Style/Documentation:
-#   Enabled: false
-
-# Metrics/BlockLength:
-#   AllowedPatterns:
-#     - guard
-#     - configure
-#     - describe
-#     - register
-
-# Metrics/MethodLength:
-#   Exclude:
-#     - db/migrate/*
-
-# Layout/LineLength:
-#   Exclude:
-#     - config/initializers/*
-#     - spec/**/*
-
-# Style/AsciiComments:
-#   Description: 'Use only ascii symbols in comments.'
-#   StyleGuide: 'https://github.com/bbatsov/ruby-style-guide#english-comments'
-#   Enabled: false
-
-# RSpec/ContextWording:
-#   Prefixes:
-#     - 'quand'
-#     - 'avec'
-#     - 'sans'
-
-# RSpec/NamedSubject:
-#   Enabled: false
-
-# RSpec/ExampleLength:
-#   Enabled: false
-
-# RSpec/EmptyExampleGroup:
-#   Enabled: false
-
-# RSpec/VariableName:
-#   AllowedPatterns:
-#     - Authorization
-#     - access-token
-#     - token-type
-
-# RSpec/ScatteredSetup:
-#   Exclude:
-#     - 'spec/requests/**/*'
-
-# RSpec/RepeatedExample:
-#   Exclude:
-#     - 'spec/requests/**/*'
-
-# RSpec/MultipleMemoizedHelpers:
-#   Max: 10
-#   Exclude:
-#     - 'spec/requests/**/*'
-
-# RSpec/MessageSpies:
-#   Enabled: false
+AllCops:
+  # Visualize warnings
+  NewCops: null
