🚚 Rename airbnb files

--- a/config/rubocop-airbnb.yml
+++ b/config/rubocop-airbnb.yml
@@ -3,4 +3,4 @@
 
 # inherit_from:
   # @see https://github.com/airbnb/ruby/blob/main/rubocop-airbnb/config/rubocop-airbnb.yml
-  # - ./airbnb/rubocop-airbnb.yml
+  # - ./__private__/rubocop-airbnb.yml
