--- a/config/__private__/rubocop-layout.yml
+++ b/config/__private__/rubocop-layout.yml
@@ -1,3 +1,4 @@
+### ⚠️ GENERATED WITH `script/pull`. DO NOT EDIT MANUALLY. ###
 # Type 'Style' (166):
 # Supports --auto-correct
 Layout/AccessModifierIndentation:
