--- a/config/__private__/rubocop-metrics.yml
+++ b/config/__private__/rubocop-metrics.yml
@@ -1,3 +1,4 @@
+### ⚠️ GENERATED WITH `script/pull`. DO NOT EDIT MANUALLY. ###
 # We're using cane for ABC complexity checks
 Metrics/AbcSize:
   Enabled: false
