--- a/config/__private__/rubocop-naming.yml
+++ b/config/__private__/rubocop-naming.yml
@@ -1,3 +1,4 @@
+### ⚠️ GENERATED WITH `script/pull`. DO NOT EDIT MANUALLY. ###
 Naming/AccessorMethodName:
   Description: Check the naming of accessor methods for get_/set_.
   Enabled: false
