--- a/config/rubocop-gemspec.yml
+++ b/config/rubocop-gemspec.yml
@@ -1,3 +1,3 @@
 inherit_from:
   # @see https://github.com/airbnb/ruby/blob/main/rubocop-airbnb/config/rubocop-gemspec.yml
-  - ./airbnb/rubocop-gemspec.yml
+  - ./__private__/rubocop-gemspec.yml
