--- a/config/rubocop-layout.yml
+++ b/config/rubocop-layout.yml
@@ -1,6 +1,6 @@
 inherit_from:
   # @see https://github.com/airbnb/ruby/blob/main/rubocop-airbnb/config/rubocop-layout.yml
-  - ./airbnb/rubocop-layout.yml
+  - ./__private__/rubocop-layout.yml
 
 Layout/DotPosition:
   EnforcedStyle: leading
