✨ Add rubocop-capybara to the require section
because rubocop-capybara is a dependency of rubocop-rspec

--- a/config/default.yml
+++ b/config/default.yml
@@ -39,6 +39,7 @@ AllCops:
 ####
 inherit_from:
   - './rubocop-bundler.yml'
+  - './rubocop-capybara.yml'
   - './rubocop-gemspec.yml'
   - './rubocop-layout.yml'
   - './rubocop-lint.yml'
