--- a/config/default.yml
+++ b/config/default.yml
@@ -46,6 +46,7 @@ inherit_from:
   - './rubocop-metrics.yml'
   - './rubocop-naming.yml'
   - './rubocop-performance.yml'
+  - './rubocop-rake.yml'
   - './rubocop-rails.yml'
   - './rubocop-rspec.yml'
   - './rubocop-security.yml'
