✨ If devise gem is present, devise-i18n gem should be added to the Gemfile.

--- a/config/default.yml
+++ b/config/default.yml
@@ -40,6 +40,7 @@ AllCops:
 inherit_from:
   - './rubocop-bundler.yml'
   - './rubocop-capybara.yml'
+  - './rubocop-captive.yml'
   - './rubocop-gemspec.yml'
   - './rubocop-layout.yml'
   - './rubocop-lint.yml'
