--- a/config/rubocop-captive.yml
+++ b/config/rubocop-captive.yml
@@ -4,11 +4,12 @@ require:
   - ../lib/rubocop/cop/captive/translation/rails_i18n_presence.rb
   - ../lib/rubocop/cop/captive/translation/kaminari_i18n_presence.rb
 
-
+# ActiveAdmin
 Captive/ActiveAdmin/ActiveAdminAddonsPresence:
   Description: 'The gem `activeadmin_addons` should be added to the Gemfile if `activeadmin` is present in Gemfile'
   Only: 'Gemfile'
 
+# Translation
 Captive/Translation/DeviseI18nPresence:
   Description: 'The gem `devise-i18n` should be added to the Gemfile if `devise` is present in Gemfile'
   Only: 'Gemfile'
