--- a/config/rubocop-captive.yml
+++ b/config/rubocop-captive.yml
@@ -3,21 +3,32 @@ require:
   - ../lib/rubocop/cop/captive/translation/devise_i18n_presence.rb
   - ../lib/rubocop/cop/captive/translation/rails_i18n_presence.rb
   - ../lib/rubocop/cop/captive/translation/kaminari_i18n_presence.rb
+  - ../lib/rubocop/cop/captive/sidekiq/cron_format.rb
 
 # ActiveAdmin
 Captive/ActiveAdmin/ActiveAdminAddonsPresence:
   Description: 'The gem `activeadmin_addons` should be added to the Gemfile if `activeadmin` is present in Gemfile'
-  Only: 'Gemfile'
+  Include:
+    - 'Gemfile'
 
 # Translation
 Captive/Translation/DeviseI18nPresence:
   Description: 'The gem `devise-i18n` should be added to the Gemfile if `devise` is present in Gemfile'
-  Only: 'Gemfile'
+  Include:
+    - 'Gemfile'
 
 Captive/Translation/RailsI18nPresence:
   Description: 'The gem `rails-i18n` should be added to the Gemfile if `rails` is present in Gemfile'
-  Only: 'Gemfile'
+  Include:
+    - 'Gemfile'
 
 Captive/Translation/KaminariI18nPresence:
   Description: 'The gem `kaminari-i18n` should be added to the Gemfile if `kaminari` is present in Gemfile'
-  Only: 'Gemfile'
+  Include:
+    - 'Gemfile'
+
+# Sidekiq
+Captive/Sidekiq/CronFormat:
+  Description: "The `cron` value must be a string in the format `'0 0 * * *'`"
+  Include:
+    - 'config/sidekiq.yml'
