--- a/config/__private__/rubocop-rspec.yml
+++ b/config/__private__/rubocop-rspec.yml
@@ -310,6 +310,10 @@ RSpec/VoidExpect:
   Description: This cop checks void `expect()`.
   Enabled: false
 
+RSpec/Capybara/CurrentPathExpectation:
+  Description: Checks that no expectations are set on Capybara's `current_path`.
+  Enabled: false
+
 RSpec/Capybara/FeatureMethods:
   Description: Checks for consistent method usage in feature specs.
   Enabled: false
