--- a/config/__private__/rubocop-style.yml
+++ b/config/__private__/rubocop-style.yml
@@ -1,4 +1,4 @@
-### ⚠️ GENERATED WITH `script/pull`. DO NOT EDIT MANUALLY. ###
+### 🚨 GENERATED WITH `script/pull`. DO NOT EDIT MANUALLY. ###
 Style/AccessModifierDeclarations:
   Enabled: false
 
