⬆️ Mets à jour les dépendances de la gem

--- a/config/default.yml
+++ b/config/default.yml
@@ -41,6 +41,7 @@ inherit_from:
   - './rubocop-bundler.yml'
   - './rubocop-capybara.yml'
   - './rubocop-captive.yml'
+  - './rubocop-factory_bot.yml'
   - './rubocop-gemspec.yml'
   - './rubocop-layout.yml'
   - './rubocop-lint.yml'
