--- a/config/rubocop-rails.yml
+++ b/config/rubocop-rails.yml
@@ -1,3 +1,6 @@
 inherit_from:
   # @see https://github.com/airbnb/ruby/blob/main/rubocop-airbnb/config/rubocop-rails.yml
   - ./__private__/rubocop-rails.yml
+
+Rails/ActionControllerFlashBeforeRender:
+  Enable: true
