✨ Désactive la règle Rails/ActionControllerTestCase
Pas utile pour Captive

--- a/config/rubocop-rails.yml
+++ b/config/rubocop-rails.yml
@@ -3,4 +3,7 @@ inherit_from:
   - ./__private__/rubocop-rails.yml
 
 Rails/ActionControllerFlashBeforeRender:
-  Enable: true
+  Enabled: true
+
+Rails/ActionControllerTestCase:
+  Enabled: false
