✨ Active Rails/DeprecatedActiveModelErrorsMethods
Permet de simplifier la transition vers Rails 7

--- a/config/rubocop-rails.yml
+++ b/config/rubocop-rails.yml
@@ -28,3 +28,6 @@ Rails/AttributeDefaultBlockValue:
 
 Rails/CompactBlank:
   Enabled: true
+
+Rails/DeprecatedActiveModelErrorsMethods:
+  Enabled: true
