✨ Active Rails/DuplicateAssociation
Évite la duplication

--- a/config/rubocop-rails.yml
+++ b/config/rubocop-rails.yml
@@ -34,3 +34,6 @@ Rails/DeprecatedActiveModelErrorsMethods:
 
 Rails/DotSeparatedKeys:
   Enabled: true
+
+Rails/DuplicateAssociation:
+  Enabled: true
