✨ Active Rails/RedundantTravelBack
Évite du code inutile

--- a/config/rubocop-rails.yml
+++ b/config/rubocop-rails.yml
@@ -91,3 +91,6 @@ Rails/PluckInWhere:
 
 Rails/RedundantPresenceValidationOnBelongsTo:
   Enabled: false
+
+Rails/RedundantTravelBack:
+  Enabled: true
