✨ Peut être utile dans certains cas d'optimisation

--- a/config/rubocop-rails.yml
+++ b/config/rubocop-rails.yml
@@ -94,3 +94,6 @@ Rails/RedundantPresenceValidationOnBelongsTo:
 
 Rails/RedundantTravelBack:
   Enabled: true
+
+Rails/RenderInline:
+  Enabled: false
