✨ Active Rails/TransactionExitStatement
Permet d'éviter des erreurs lors de l'utilisation de Transaction

--- a/config/rubocop-rails.yml
+++ b/config/rubocop-rails.yml
@@ -133,3 +133,6 @@ Rails/ToSWithArgument:
 
 Rails/TopLevelHashWithIndifferentAccess:
   Enabled: true
+
+Rails/TransactionExitStatement:
+  Enabled: true
