✨ Active Rails/UnusedIgnoredColumns
Évite d'utiliser des colonnes supprimés

--- a/config/rubocop-rails.yml
+++ b/config/rubocop-rails.yml
@@ -136,3 +136,6 @@ Rails/TopLevelHashWithIndifferentAccess:
 
 Rails/TransactionExitStatement:
   Enabled: true
+
+Rails/UnusedIgnoredColumns:
+  Enabled: true
