✨ Retire des contraintes à l'utilisation de rswag
Exclue 2 règles pour le dossier spec/requests/

--- a/config/rubocop-rspec.yml
+++ b/config/rubocop-rspec.yml
@@ -4,3 +4,12 @@ inherit_from:
 
 RSpec/Focus:
   Enabled: true
+
+# exclue certains fichiers pour simplifier l'utilisation de rswag
+RSpec/ScatteredSetup:
+  Exclude:
+    - 'spec/requests/**/*'
+
+Rspec/RepeatedExample:
+  Exclude:
+    - 'spec/requests/**/*'
