--- a/config/rubocop-rspec.yml
+++ b/config/rubocop-rspec.yml
@@ -10,6 +10,6 @@ RSpec/ScatteredSetup:
   Exclude:
     - 'spec/requests/**/*'
 
-Rspec/RepeatedExample:
+RSpec/RepeatedExample:
   Exclude:
     - 'spec/requests/**/*'
