✨ Ignore Layout/LineLength for rspec files
- too many false positive on describe, context, it blocks

If line length is too long for tests, it is not an important problem (at first sight)

--- a/config/rubocop-layout.yml
+++ b/config/rubocop-layout.yml
@@ -43,3 +43,8 @@ Layout/MultilineMethodParameterLineBreaks:
 Layout/LineLength:
   # Disable LineLength on comments
   AllowedPatterns: ['^(\s*#)']
+  Exclude:
+    - '**/*_spec.rb'
+    - '**/*_test.rb'
+    - '**/*_spec.*'
+    - '**/*_test.*'
