--- a/config/rubocop-captive.yml
+++ b/config/rubocop-captive.yml
@@ -4,6 +4,7 @@ require:
   - ../lib/rubocop/cop/captive/translation/rails_i18n_presence.rb
   - ../lib/rubocop/cop/captive/translation/kaminari_i18n_presence.rb
   - ../lib/rubocop/cop/captive/rspec/specify_before_parameter.rb
+  - ../lib/rubocop/cop/captive/rails/no_email_from_controller.rb
   - ../lib/rubocop/cop/captive/string_where_in_scope.rb
   - ../lib/rubocop/cop/captive/no_app_env.rb
 
@@ -34,6 +35,12 @@ Captive/RSpec/SpecifyBeforeParameter:
   Description: 'Specify the parameter in `before` blocks. Example : before(:each) or before(:all)'
   Include:
     - 'spec/**/*'
+
+# Rails
+Captive/Rails/NoEmailFromController:
+  Description: "Do not send emails from controllers. Because it doesn't follow the MVC standard"
+  Include:
+    - 'app/controllers/**/*'
 
 # other
 Captive/StringWhereInScope:
