--- a/config/rubocop-layout.yml
+++ b/config/rubocop-layout.yml
@@ -44,7 +44,7 @@ Layout/LineLength:
   # Disable LineLength on comments
   AllowedPatterns: ['^(\s*#)']
   Exclude:
+    - 'spec/**/*.rb'
+    - 'test/**/*.rb'
     - '**/*_spec.rb'
     - '**/*_test.rb'
-    - '**/*_spec.*'
-    - '**/*_test.*'
