--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "lint-staged": "13.2.3"
   },
   "scripts": {
-    "docs": "export DOC_DIR=docs; yard -o $DOC_DIR && git add $DOC_DIR/",
+    "docs": "export DOC_DIR=doc/api; yard -o $DOC_DIR && git add $DOC_DIR/",
     "prepare": "husky install"
   },
   "lint-staged": {
