--- a/config/default.yml
+++ b/config/default.yml
@@ -25,8 +25,8 @@ AllCops:
 
     # Additional exclude files by rubocop-rails_config
     # @see https://github.com/toshimaru/rubocop-rails_config/blob/main/config/rails.yml#L20
-    - 'bin/**/*'
-    - 'db/schema.rb'
+    - '**/bin/**/*'
+    - '**/db/schema.rb'
 
 
 
