--- a/config/rubocop-captive.yml
+++ b/config/rubocop-captive.yml
@@ -5,6 +5,7 @@ require:
   - ../lib/rubocop/cop/captive/translation/kaminari_i18n_presence.rb
   - ../lib/rubocop/cop/captive/rspec/specify_before_parameter.rb
   - ../lib/rubocop/cop/captive/rails/no_email_from_controller.rb
+  - ../lib/rubocop/cop/captive/rails/force_ssl_enabled_in_production.rb
   - ../lib/rubocop/cop/captive/string_where_in_scope.rb
   - ../lib/rubocop/cop/captive/no_app_env.rb
 
@@ -41,6 +42,12 @@ Captive/Rails/NoEmailFromController:
   Description: "Do not send emails from controllers. Because it doesn't follow the MVC standard"
   Include:
     - 'app/controllers/**/*'
+
+# Rails
+Captive/Rails/ForceSslEnabledInProduction:
+  Description: "Ensures SSL is forced in production, so that secure cookies are used."
+  Include:
+    - 'config/environments/production.rb'
 
 # other
 Captive/StringWhereInScope:
