🔧 Retire des fichiers de config pour les règles de magic number
Afin de faciliter l'adoption de la version

--- a/config/rubocop-magic_numbers.yml
+++ b/config/rubocop-magic_numbers.yml
@@ -7,6 +7,8 @@ MagicNumbers/NoArgument:
     - 0
   Exclude:
     - spec/**/*_spec.rb
+    - spec/rails_helper.rb
+    - config/**/*
 
 # Cette règle empeche de pouvoir faire des variables d'instances qui servent de compteur
 MagicNumbers/NoAssignment:
