🩹 Ignore les fichiers _test.rb (Minitest) pour rubocop-magic_number
de la même manière que l'on ignore les fichiers _spec.rb

--- a/config/rubocop-magic_numbers.yml
+++ b/config/rubocop-magic_numbers.yml
@@ -9,6 +9,7 @@ MagicNumbers/NoArgument:
     - 1
   Exclude:
     - spec/**/*_spec.rb
+    - test/**/*_test.rb
     - spec/rails_helper.rb
     - db/migrate/*.rb
     - config/**/*
@@ -19,13 +20,16 @@ MagicNumbers/NoAssignment:
   Enabled: false
   Exclude:
     - spec/**/*_spec.rb
+    - test/**/*_test.rb
 
 MagicNumbers/NoDefault:
   Enabled: true
   Exclude:
     - spec/**/*_spec.rb
+    - test/**/*_test.rb
 
 MagicNumbers/NoReturn:
   Enabled: true
   Exclude:
     - spec/**/*_spec.rb
+    - test/**/*_test.rb
