✨ Désactive la règle MagicNumbers/NoDefault
Je suis plutot pour le fait de mettre des chiffres dans les valeurs par défaut des méthodes

--- a/config/rubocop-magic_numbers.yml
+++ b/config/rubocop-magic_numbers.yml
@@ -27,13 +27,7 @@ MagicNumbers/NoAssignment:
     - '**/config/**/*'
 
 MagicNumbers/NoDefault:
-  Enabled: true
-  Exclude:
-    - '**/spec/**/*.rb'
-    - '**/test/**/*.rb'
-    - '**/*_spec.rb'
-    - '**/*_test.rb'
-    - '**/config/**/*'
+  Enabled: false
 
 MagicNumbers/NoReturn:
   Enabled: true
