🔧 Automerge minor and patch ruby

--- a/renovate.json
+++ b/renovate.json
@@ -1,4 +1,10 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
-  "extends": ["github>Captive-Studio/renovate-config:library"]
+  "extends": ["github>Captive-Studio/renovate-config:library"],
+  "packageRules": [
+    {
+      "matchPackageNames": ["node", "ruby"],
+      "matchUpdateTypes": ["patch", "minor"]
+    }
+  ]
 }
