--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "npm-run-all2": "7.0.1"
   },
   "scripts": {
-    "docs": "export DOC_DIR=docs; yard -o $DOC_DIR && git add $DOC_DIR/",
+    "docs": "export DOC_DIR=docs; bundle exec yard -o $DOC_DIR && git add $DOC_DIR/",
     "postinstall": "npx run-p \"postinstall:*\"",
     "postinstall:githooks": "[ -n \"${CI:-}\" ] || git config core.hooksPath .githooks",
     "release": "script/release"
