--- a/config/rubocop-rails.yml
+++ b/config/rubocop-rails.yml
@@ -154,3 +154,18 @@ Rails/WhereNot:
 
 Rails/WhereNotWithMultipleConditions:
   Enabled: true
+
+Rails/DangerousColumnNames: # new in 2.21
+  Enabled: true
+Rails/EnumSyntax: # new in 2.26
+  Enabled: true
+Rails/EnvLocal: # new in 2.22
+  Enabled: true
+Rails/RedundantActiveRecordAllMethod: # new in 2.21
+  Enabled: true
+Rails/ThreeStateBooleanColumn: # new in 2.19
+  Enabled: true
+Rails/UnusedRenderContent: # new in 2.21
+  Enabled: true
+Rails/WhereRange: # new in 2.25
+  Enabled: true
