--- a/config/default.yml
+++ b/config/default.yml
@@ -48,9 +48,8 @@ inherit_from:
   - './rubocop-magic_numbers.yml'
   - './rubocop-metrics.yml'
   - './rubocop-naming.yml'
-  - './rubocop-performance.yml'
   - './rubocop-rake.yml'
-  - './rubocop-rails.yml'
   - './rubocop-rspec.yml'
   - './rubocop-security.yml'
   - './rubocop-style.yml'
+  - './rubocop-rails-omakase.yml'
