--- a/config/__private__/rubocop-capybara.yml
+++ b/config/__private__/rubocop-capybara.yml
@@ -1,6 +1,5 @@
 ### ⚠️ GENERATED WITH `script/pull`. DO NOT EDIT MANUALLY. ###
-require:
-  - rubocop-capybara
+plugins: rubocop-capybara
 
 Capybara/CurrentPathExpectation:
   Description: Checks that no expectations are set on Capybara's `current_path`.
